COMPLETED: syntax analyzer

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
          <tr>
             <th>Моя майбутня професія</th>
             <th>Людина-природа</th>
-            <th>https://onlinetestpad.com/ru/testview/12319-vasha-budushhaya-professiya</th>
+            <th>url</th>
          </tr>
          <tr>
             <th>Тест на уважність</th>
             <th>33%</th>
-            <th>https://onlinetestpad.com/ru/testview/53800-test-na-vnimatelnost</th>
+            <th>url</th>
          </tr>
       </table>
       <center><img src="img.jpg" height="380" width="1200"></center>
